--- a/style.css
+++ b/style.css
@@ -49,7 +49,39 @@ body{
     left: 50%;
     
 }
+.my-recipe{
+    text-align: center;
+}
 
+.recipe-title{
+    box-shadow: 10px 10px 20px 10px gray ;
+    width: 18%;
+    height: 80%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 10px;
+    border-radius: 10px;
+    padding: 2%;
+
+}
+
+
+.recipe-title img{
+    border-radius: 10px;
+    border: 1px;
+    padding: 5px;
+    width: 220px;
+
+}
+
+.healthy-recipes{
+    display: flex;
+    border-left: 2%;
+    align-items: center;
+
+    
+
+}
 
 
 
